# jaccard-cuda

./: .gitignore  CMakeLists.txt  README.md
src/: jaccard.cu  jaccard.cuh  main.cu  reduce.cu  utils.cuh
tests/: test_compression.cu  test_intersection_union.cu  test_jaccard_similarity.cu  test_main.cu  test_reduce_sum.cu  test_utils.cuh
